src/objects/Workflow_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Campaign_Project_Record_Type__c</fullName>
        <label>Campaign Project Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Name__c</fullName>
        <description>Record Name for the entitlement used in campaign project. The entitlement process should match with this record type.</description>
        <inlineHelpText>Record Name for the entitlement used in campaign project. The entitlement process should match with this record type.</inlineHelpText>
        <label>Entitlement Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Template_Name__c</fullName>
        <label>Workflow Template Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Workflow Setting</label>
    <pluralLabel>Workflow Settings</pluralLabel>
</CustomObject>